tdf#148395: CRASH: doubleclick on chart OLE Object (bandaid)

Change-Id: I623d2cf4b4665cd33e30ef0891d831370faf2553
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132591
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
Tested-by: Jenkins